Update zh-rTW translation for CrAzYpass

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -12,7 +12,7 @@
     <string name="menu_rename">重新命名 &#8230;</string>
     <string name="menu_archive">封存</string>
     <string name="menu_backup">備份</string>
-    <string name="menu_changepw">[Change Passphrase]</string>
+    <string name="menu_changepw">更改密碼</string>
 
     <string name="password_weak">再長一點 &#8230;</string>
     <string name="password_fair">嗯 &#8230;</string>
@@ -108,7 +108,7 @@
     <string name="archive_progress">正在封存中</string>
     <string name="rename_progress">正在重新命名</string>
     <string name="open_progress">正在檢查daemon連線</string>
-    <string name="changepw_progress">[Change Password in progress]</string>
+    <string name="changepw_progress">正在更改密碼中</string>
 
     <string name="service_progress">正在關閉錢包 &#8230;\n可能會花費些許時間!</string>
 
@@ -118,8 +118,8 @@
     <string name="archive_failed">封存失敗!</string>
     <string name="delete_failed">刪除失敗!</string>
     <string name="rename_failed">重新命名失敗!</string>
-    <string name="changepw_failed">[Change Password failed!]</string>
-    <string name="changepw_success">[Password changed]</string>
+    <string name="changepw_failed">密碼更改失敗!</string>
+    <string name="changepw_success">密碼更改成功</string>
 
     <string name="label_daemon">節點</string>
     <string name="prompt_daemon">([&lt;名稱&gt;:&lt;密碼&gt;@]&lt;節點&gt;[:&lt;port&gt;])</string>
@@ -151,8 +151,8 @@
 
     <string name="prompt_rename">重新命名 %1$s</string>
 
-    <string name="prompt_changepw">[New Passphrase for %1$s]</string>
-    <string name="prompt_changepwB">[Repeat Passphrase for %1$s]</string>
+    <string name="prompt_changepw">為 %1$s 設定新密碼</string>
+    <string name="prompt_changepwB">重複輸入 %1$s 的密碼</string>
     <string name="prompt_password">%1$s 的密碼</string>
     <string name="prompt_send_password">確認密碼</string>
     <string name="bad_password">密碼錯誤!</string>
@@ -206,11 +206,11 @@
     <string name="generate_title">建立錢包</string>
     <string name="generate_name_hint">錢包名稱</string>
     <string name="generate_password_hint">錢包密碼</string>
-    <string name="generate_bad_passwordB">[Passphrases do not match]</string>
-    <string name="generate_empty_passwordB">[Passphrase may not be empty]</string>
+    <string name="generate_bad_passwordB">密碼不符</string>
+    <string name="generate_empty_passwordB">密碼不得空白</string>
     <string name="generate_buttonGenerate">建立錢包!</string>
     <string name="generate_seed">記憶種子碼</string>
-    <string name="generate_button_accept">[I have noted the above info!]</string>
+    <string name="generate_button_accept">我已抄寫以上資訊!</string>
 
     <string name="generate_button_backup">備份</string>
     <string name="generate_button_export">匯出金鑰</string>
@@ -243,7 +243,7 @@
     <string name="generate_spendkey_label">花費金鑰</string>
     <string name="generate_mnemonic_label">記憶種子碼</string>
     <string name="generate_restoreheight_label">回復高度:</string>
-    <string name="generate_crazypass_label">[Wallet Files Restore Password]</string>
+    <string name="generate_crazypass_label">錢包檔回復密碼</string>
 
     <string name="generate_check_key">輸入有效的金鑰</string>
     <string name="generate_check_address">輸入有效的地址</string>
@@ -362,5 +362,5 @@
     <string name="fab_create_new">建立新錢包</string>
     <string name="fab_restore_viewonly">回復唯讀錢包</string>
     <string name="fab_restore_key">從私鑰回復錢包</string>
-    <string name="fab_restore_seed">從25字種子碼恢復錢包</string>
+    <string name="fab_restore_seed">從25字種子碼回復錢包</string>
 </resources>
