Display a security warning

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -143,6 +143,10 @@
     <string name="generate_name_hint">Nombre del monedero</string>
     <string name="generate_password_hint">Frase de Contraseña</string>
     <string name="generate_fingerprint_hint">[Allow to open wallet using fingerprint]</string>
+    <string name="generate_fingerprint_warn">[If you allow to open wallet using fingerprint, anyone
+        who can get your fingerprint will have full access to your funds.\n\nFor example, a malicious
+        user around you can unlock your wallet when you are asleep.\n\nAre you sure to enable this function?
+    ]</string>
     <string name="generate_bad_passwordB">[Passphrases do not match]</string>
     <string name="generate_empty_passwordB">[Passphrase may not be empty]</string>
     <string name="generate_buttonGenerate">¡Házme ya un monedero!</string>
