Update warning message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,10 +214,18 @@
     <string name="generate_name_hint">Wallet Name</string>
     <string name="generate_password_hint">Wallet Passphrase</string>
     <string name="generate_fingerprint_hint">Allow to open wallet using fingerprint</string>
-    <string name="generate_fingerprint_warn">If you allow to open wallet using fingerprint, anyone
-        who can get your fingerprint will have full access to your funds.\n\nFor example, a malicious
-        user around you can unlock your wallet when you are asleep.\n\nAre you sure to enable this function?
-    </string>
+    <string name="generate_fingerprint_warn"><![CDATA[
+        <strong>Fingerprint Authentication</strong>
+        <p>With fingerprint authentication enabled, you can view wallet balance and receive funds
+        without entering password.</p>
+        <p>But for additional security, monerujo will still require you to enter password when
+        viewing wallet details or sending funds.</p>
+        <strong>Security Warning</strong>
+        <p>Finally, monerujo wants to remind you that anyone who can get your fingerprint will be
+        able to peep into your wallet balance.</p>
+        <p>For instance, a malicious user around you can open your wallet when you are asleep.</p>
+        <strong>Are you sure to enable this function?</strong>
+    ]]></string>
     <string name="generate_bad_passwordB">Passphrases do not match</string>
     <string name="generate_empty_passwordB">Passphrase may not be empty</string>
     <string name="generate_buttonGenerate">Make me a wallet already!</string>
