--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -210,9 +210,15 @@
     <string name="generate_name_hint">錢包名稱</string>
     <string name="generate_password_hint">錢包密碼</string>
     <string name="generate_fingerprint_hint">允許使用指紋開啟錢包</string>
-    <string name="generate_fingerprint_warn">若您允許使用指紋來開啟錢包，任何可以取得您指紋的人都對您的錢包擁有完整的存取權。
-        \n\n例如，您周遭的惡意使用者可以趁您睡著時，使用您的指紋開啟錢包。\n\n您確定要啟用本功能嗎？
-    </string>
+    <string name="generate_fingerprint_warn"><![CDATA[
+        <strong>指紋驗證</strong>
+        <p>啟用指紋驗證後，您可以觀看錢包餘額並接收資金，而無需輸入密碼。</p>
+        <p>但為了提高安全性，monerujo 仍然會要求您在觀看錢包詳細資訊或發送資金時輸入密碼。</p>
+        <strong>安全警告</strong>
+        <p>最後，monerujo 想提醒您，任何可以取得您指紋的人都能夠窺視您的錢包餘額。</p>
+        <p>例如，您周遭的惡意使用者可以趁您睡著時使用您的指紋開啟錢包。</p>
+        <strong>您確定要啟用本功能嗎？</strong>
+    ]]></string>
     <string name="generate_bad_passwordB">密碼不符</string>
     <string name="generate_empty_passwordB">密碼不得空白</string>
     <string name="generate_buttonGenerate">建立錢包!</string>
